atualização página 01 Barbearia Alura

--- a/barbearia alura pag 01/index.html
+++ b/barbearia alura pag 01/index.html
@@ -14,7 +14,7 @@
         <h1 class="titulo-principal">Barbearia Alura</h1>
     </header>
    
-    <img id="banner" src="img/banner.jpg" alt="banner">
+    <img id="banner" src="img/pag 01/banner.jpg" alt="banner">
         <div class="principal">
             <h2 class="titulo-centralizado"> Sobre a Barbearia Alura</h2>
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz 
@@ -37,7 +37,7 @@
             <li class="itens">Profissionais Qualificados </li>
         </ul>
 
-    <img src="img/beneficios.jpg" class="imagembeneficios">
+    <img src="img/pag 01/beneficios.jpg" class="imagembeneficios">
    </div>
 
 </body>
