--- a/barbearia alura pag 01/contato.html
+++ b/barbearia alura pag 01/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia Alura pag 02</title>
+    <title>Barbearia Alura pag contato</title>
     <link rel="stylesheet" href="estilos2.css">
 </head>
 <body>
@@ -20,28 +20,8 @@
             </nav>
         </div>
     </header>
-
     <main>
-        <ul class="produtos">
-            <li>
-                <h2>Cabelo</h2>
-                <img src="img/pag 02/cabelo.jpg" >
-                <p class="produto-descricao">Na tesoura ou na máquina, como o cliente preferir</p>
-                <p class="produto-preco">R$25,00</p>
-            </li>
-            <li>
-                <h2>Barba</h2>
-                <img src="img/pag 02/barba.jpg">
-                <p class="produto-descricao">Corte e desenho profissional de barba</p>
-                <p class="produto-preco">R$18,00</p>
-            </li>
-            <li>
-                <h2>Cabelo + Barba</h2>
-                <img src="img/pag 02/cabelo+barba.jpg">
-                <p class="produto-descricao">Pacote completo de cabelo e barba</p>
-                <p class="produto-preco">R$35,00</p>
-            </li>
-        </ul>
+        
     </main>
 
     <footer>
