página Principal  atualizada com 75% já concluida

--- a/barbearia alura pag 01/contato.html
+++ b/barbearia alura pag 01/contato.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato Barbearia Alura </title>
-    <link rel="stylesheet" href="barbearia alura pag 01/reset.css">
-    <link rel="stylesheet" href="barbearia alura pag 01/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="caixa">
-            <h1><img src="barbearia alura pag 01/img/pag 02/logo.png" alt="Logo da 
+            <h1><img src="img/pag 02/logo.png" alt="Logo da 
                 Barbearia Alura"></h1>
             <nav>
                 <ul>
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-        <img src="barbearia alura pag 01/img/pag 02/logo-branco.png" alt="Logo da Barbearia
+        <img src="img/pag 02/logo-branco.png" alt="Logo da Barbearia
          Alura">
         <p class="copyright"> Barbearia Alura - 2023 Criado pro <a 
             href="https://www.linkedin.com/in/franciscoflsjr/"> Francisco Lopes da Silva 
